WTPlanner/force-app/main/default/objects/Expedition_Gear__c/Expedition_Gear__c.object-meta.xml
<CustomObject>
    <label>Expedition Gear</label>
    <pluralLabel>Expedition Gear</pluralLabel>
    <nameField>
        <label>Expedition Gear ID</label>
        <type>AutoNumber</type>
        <displayFormat>EG-{00000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>