WTPlanner/force-app/main/default/objects/Expedition_Gear__c/fields/Gear_Item__c.field-meta.xml
<CustomField>
    <fullName>Gear_Item__c</fullName>
    <label>Gear Item</label>
    <type>MasterDetail</type>
    <referenceTo>Gear_Item__c</referenceTo>
    <relationshipLabel>Expedition Gear</relationshipLabel>
    <relationshipName>Expedition_Gear</relationshipName>
    <relationshipOrder>1</relationshipOrder>
</CustomField>